# components-mcu

./: .gitmodules  Kconfig.projbuild  Makefile  README.md  README_8md_source.html  allocate__buffer_8hh_source.html  classAllocateBuffer.html  classAllocatorMalloc-members.html  classAllocatorMalloc.html  classContentReader__inherit__graph.map  classFileContentReader-members.html  classJsmn.html  classJsmnBase.js  classJsmnBase__coll__graph.map  classJsmnBase__coll__graph.md5  classMutexDummy__with__logging-members.html  classMutexRecursive__with__logging-members.html  classMutexRecursive__with__logging.html  classNet__Mqtt-members.html  classNet__Mqtt.html  classSettingsBase.html  classSettingsBase__coll__graph.map  classSettings__coll__graph.md5  classSettings__inherit__graph.md5  classTime__Out__Secs-members.html  classUoutBuilderJson-members.html  classUoutBuilderJson.html  classUoutBuilderJson__coll__graph.md5  classUoutPrinter-members.html  classUoutPrinter.html  classUoutWriter-members.html  classUoutWriterConsole-members.html  classUoutWriterConsole__coll__graph.map  classUoutWriterFile.html  classUoutWriterFunction__coll__graph.map  classUoutWriter__coll__graph.map  classWeather-members.html  classWeather__Adapter__Neutral-members.html  classWeather__Irrigation-members.html  classWeather__Provider.html  (+176 more)
_test_/components/main/: CMakeLists.txt
cli/: CMakeLists.txt  Kconfig  cli.cc  cli_private.h  cmdline_get.cc  cmdline_parse.cc  cmdline_process.cc  cmdline_set.cc
cli/esp32/: cli_task.cc
cli/include/cli/: cli.h  cli_types.h  mutex.h
cli/test/: test_cli.cc
components/cli/: CMakeLists.txt  cli.c  cli.cc  cli_app_cfg.h  cli_private.h  cmdline_get.c  cmdline_get.cc  cmdline_parse.c  cmdline_parse_json.c  cmdline_process.c  cmdline_process.cc  cmdline_set.c  cmdline_set.cc  mutex.cc
components/cli/esp32/: cli_task.c  cli_task.cc
components/cli/test/: CMakeLists.txt  test_cli.cc  test_json.c
components/config_kvs/: CMakeLists.txt  Kconfig  config_comps.c  config_comps.cc  config_gs.c  config_kvs.c  config_kvs.cc  config_kvs.h
components/config_kvs/test/: CMakeLists.txt  test_config.c  test_config.cc
components/net/: CMakeLists.txt  Kconfig  ipnet.c  ipnet.cc
components/net/esp32/: ethernet.c  ethernet.cc  http_client.c  http_client.cc  ipnet.c  ntp.c  ntp.cc  tcp_cli_server_task.c  tcp_cli_server_task.cc  tcp_server.c  tcp_server.cc  wifi_ap.c  wifi_ap.cc  wifistation.c  wifistation.cc
components/net/esp8266/: ipnet.c  ntp.c  tcp_server.c  tcp_server.cc  udp.c  wifistation.c
components/net_http_server/: CMakeLists.txt  Kconfig  http_server.c  http_server.cc  http_server_impl.h
components/net_http_server/esp32/: http_server.c  http_server.cc
components/net_mqtt/: CMakeLists.txt  Kconfig  mqtt.c  mqtt.cc
components/net_mqtt/esp32/: mqtt.c  mqtt.cc
components/net_mqtt/esp8266/: mcu_mqtt.c  mcu_mqtt.h  user_config.local.h
components/net_mqtt/host/: mqtt.cc
components/stm32/: CMakeLists.txt  stm32.c  stm32_bl.c  stm32_ota.c
components/stm32/esp32/: mutex.cc  stm32.c  stm32_bl.c  stm32_ota.c  stm32_ota.cc
components/test_host/: CMakeLists.txt  catch2.cc  host_test.cmake
components/test_host/test_runner/: mock.cc
components/txtio/: CMakeLists.txt  inout.c  inout.cc  mutex.cc  txtio_app_cfg.h  txtio_imp.h  txtio_mutex.cc  txtio_mutex.h  txtio_mutex.hh
components/txtio/esp32/: mutex.c  txtio_setup.c  txtio_setup.cc
components/txtio/esp8266/: txtio_setup.c
components/txtio/host/: inout.cc
components/txtio/test/: CMakeLists.txt
components/uout/: CMakeLists.txt  callbacks.cc  cli_out.cc  cli_out.h  so_mutex.cc  so_out.cc  status_json.c  status_json.cc  uo_write_config.cc  userio_app_cfg.h
components/uout/test/: CMakeLists.txt  test_callbacks.cc  test_target_desc.cc
config_kvs/: CMakeLists.txt  Kconfig  comp_settings.cc  config_comps.cc  config_kvs.cc
config_kvs/include/config_kvs/: comp_settings.hh  config.h  config_kvs.h  register_settings.hh  settings.hh  settings_template.hh
config_kvs/test/: CMakeLists.txt  test_config.cc
jsmn/: CMakeLists.txt
jsmn/include/jsmn/: jsmn_iterate.hh
jsmn/test/: CMakeLists.txt  test_crash.cc
net/: CMakeLists.txt  Kconfig
net/esp32/: ethernet.cc  http_client.cc  ntp.cc  tcp_cli_server_task.cc  tcp_server.cc  wifi_ap.cc  wifistation.cc
net/host/: http_client.cc  http_client.hh
net/include/net/: comp_glue.hh  ethernet_setup.hh  http_client.h  ipnet.h  ntp_client_setup.hh  tcp_cli_server_setup.hh  wifi_ap_setup.h  wifi_station_setup.hh
net_connect/: CMakeLists.txt  Kconfig
net_connect/esp32/: network_connection.cc
net_connect/include/net/: network_connection.hh
net_http_server/: CMakeLists.txt  Kconfig
net_http_server/esp32/: http_server.cc  uri_handlers.cc  websocket.cc
net_http_server/include/net_http_server/: comp_glue.hh  content.hh
stm32/: CMakeLists.txt  Kconfig  stm32.cc  stm32_bl.cc  stm32_bootloader.cc  stm32_flash.cc  stm32_impl.hh
stm32/esp32/: lock_guard.hh  mutex.cc  stm32.c  stm32.cc  stm32_bl.c  stm32_bl.cc  stm32_flash.cc  stm32_impl.cc  stm32_impl.hh  stm32_ota.cc  stm32_uart.cc
stm32/include/stm32/: comp_glue.hh  lock_guard.hh  mutex.h  mutex.hh  stm32.h  stm32.hh  stm32_bl.h  stm32_bootloader.hh  stm32_flash.hh  stm32_ota.h  stm32_uart.hh  stm32_uart_ts.hh
txtio/: CMakeLists.txt  Kconfig  inout.cc  txtio_app_cfg.h
txtio/esp32/: txtio_setup.cc
txtio/test/: CMakeLists.txt  test_a.cc
uout/: CMakeLists.txt  Kconfig  callbacks.cc  cli_out.cc  so_out.cc  so_target_desc.cc  status_json.cc  uo_write_config.cc
uout/test/: test_target_desc.cc
utils_debug/: CMakeLists.txt
utils_misc/: CMakeLists.txt  Kconfig  base64.c  cstring_utils.cc  ftoa.c  stof.c
utils_misc/esp32/: mutex.cc
utils_misc/test/: test_csu.cpp  test_ftoa.cpp
utils_time/: CMakeLists.txt  Kconfig  periodic.c
weather/: CMakeLists.txt  Kconfig  openweathermap.cc  openweathermap.hh  parse_json.cc  parse_json.hh  weather.cc  weather_irrigation.cc
weather/esp32/: weather.cc
weather/test/: CMakeLists.txt  test_fetch.cc  test_irrigation.cc  test_json.cc  weather_data.h
(+692 files in other folders)
